--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -96,9 +96,13 @@
       </VBox>
       <VBox prefHeight="586.0" prefWidth="762.0" HBox.hgrow="ALWAYS">
          <children>
-            <AnchorPane prefHeight="275.0" prefWidth="782.0" styleClass="topConsole" stylesheets="@style.css" VBox.vgrow="ALWAYS">
+            <AnchorPane fx:id="canvasConsole" prefHeight="275.0" prefWidth="782.0" styleClass="topConsole" stylesheets="@style.css" VBox.vgrow="ALWAYS">
                <children>
-                  <Canvas fx:id="topConsoleCanvas" height="236.0" width="742.0" />
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Canvas fx:id="topConsoleCanvas" height="236.0" width="742.0" />
+                     </children>
+                  </VBox>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
