--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,24 +20,25 @@
    <children>
       <VBox fx:id="sideAnchor" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="400.0" minWidth="200.0" prefHeight="586.0" prefWidth="263.0" styleClass="sideAnchor" stylesheets="@style.css" HBox.hgrow="NEVER">
          <children>
-            <GridPane prefHeight="544.0" prefWidth="252.0" VBox.vgrow="ALWAYS">
+            <GridPane prefHeight="544.0" prefWidth="252.0" vgap="2.0" VBox.vgrow="ALWAYS">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="173.0" minHeight="10.0" percentHeight="20.0" prefHeight="95.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="20.0" prefHeight="87.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="5.0" prefHeight="268.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="10.0" prefHeight="268.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="5.0" prefHeight="55.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="10.0" prefHeight="73.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="10.0" prefHeight="37.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="10.0" prefHeight="79.0" valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="547.0" minHeight="0.0" percentHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" percentHeight="20.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="173.0" minHeight="10.0" percentHeight="10.0" prefHeight="129.6666488647461" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="547.0" minHeight="10.0" percentHeight="10.0" prefHeight="64.3333511352539" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="547.0" percentHeight="3.0" prefHeight="69.33335876464844" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="6.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="3.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="6.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="8.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="8.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="8.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="1.7976931348623157E308" percentHeight="15.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <BorderPane prefHeight="295.0" prefWidth="196.0" styleClass="sideLabel" stylesheets="@style.css">
+                  <BorderPane prefHeight="125.0" prefWidth="259.0" styleClass="sideLabel" stylesheets="@style.css">
                      <center>
                         <Label alignment="CENTER" prefHeight="27.0" prefWidth="143.0" text="KauppaSimu" textFill="WHITE" BorderPane.alignment="CENTER">
                            <font>
@@ -45,10 +47,13 @@
                         </Label>
                      </center>
                   </BorderPane>
-                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#handleStart" prefHeight="65.0" prefWidth="175.0" text="Käynnistä" textFill="WHITE" GridPane.rowIndex="1">
+                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#handleStart" prefHeight="49.0" prefWidth="144.0" text="Käynnistä" textFill="WHITE" GridPane.rowIndex="1">
                      <font>
                         <Font name="Century Gothic Bold" size="17.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" top="20.0" />
+                     </GridPane.margin>
                   </Button>
                   <Label alignment="CENTER" text="Syötä aika" textFill="WHITE" GridPane.rowIndex="2">
                      <font>
@@ -85,11 +90,57 @@
                         <Font name="Century Gothic Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button fx:id="ajaUudelleenButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleAjaUudelleen" prefHeight="65.0" prefWidth="175.0" text="Aja uudelleen" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.vgrow="ALWAYS">
-                     <font>
-                        <Font name="Century Gothic Bold" size="17.0" />
-                     </font>
-                  </Button>
+                  <VBox alignment="CENTER" GridPane.rowIndex="9">
+                     <children>
+                        <Label fx:id="palvelupisteidenMaara" text="Kassojen määrä" textFill="WHITE">
+                           <font>
+                              <Font name="Century Gothic Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Slider fx:id="kassojenMaara" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" VBox.vgrow="ALWAYS">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" right="40.0" top="10.0" />
+                           </VBox.margin>
+                        </Slider>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" GridPane.rowIndex="10">
+                     <children>
+                        <Label text="Palveluaika mean" textFill="WHITE">
+                           <font>
+                              <Font name="Century Gothic Bold" size="12.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="mean" alignment="CENTER" VBox.vgrow="ALWAYS">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="40.0" right="40.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="Century Gothic Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                        <Label text="Palveluaika varianssi" textFill="WHITE">
+                           <font>
+                              <Font name="Century Gothic Bold" size="12.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="variance" alignment="CENTER" VBox.vgrow="ALWAYS">
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" />
+                           </VBox.margin>
+
+                        </TextField>
+                     </children>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" />
+                     </GridPane.margin>
+                  </VBox>
                </children>
             </GridPane>
          </children>
@@ -98,11 +149,11 @@
          <children>
             <AnchorPane fx:id="canvasConsole" prefHeight="275.0" prefWidth="782.0" styleClass="topConsole" stylesheets="@style.css" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
+                  <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Canvas fx:id="topConsoleCanvas" height="236.0" width="742.0" />
                      </children>
-                  </VBox>
+                  </HBox>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
