--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -97,7 +97,7 @@
                               <Font name="Century Gothic Bold" size="12.0" />
                            </font>
                         </Label>
-                        <Slider fx:id="kassojenMaara" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" VBox.vgrow="ALWAYS">
+                        <Slider fx:id="kassaSlider" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets bottom="10.0" left="40.0" right="40.0" top="10.0" />
                            </VBox.margin>
