--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -70,6 +70,9 @@
                      <GridPane.margin>
                         <Insets left="40.0" right="40.0" />
                      </GridPane.margin>
+                     <font>
+                        <Font name="Century Gothic Bold" size="12.0" />
+                     </font>
                   </TextField>
                   <Label alignment="CENTER" text="Syötä viive" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <font>
@@ -80,6 +83,9 @@
                      <GridPane.margin>
                         <Insets left="40.0" right="40.0" />
                      </GridPane.margin>
+                     <font>
+                        <Font name="Century Gothic Bold" size="12.0" />
+                     </font>
                   </TextField>
                   <Label focusTraversable="false" text="Palveluaika mean" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
                      <font>
@@ -103,6 +109,9 @@
                      <GridPane.margin>
                         <Insets left="40.0" right="40.0" />
                      </GridPane.margin>
+                     <font>
+                        <Font name="Century Gothic Bold" size="12.0" />
+                     </font>
 
                         </TextField>
                   <Button fx:id="nopeutaButton" mnemonicParsing="false" onAction="#handleNopeuta" prefWidth="120.0" text="Nopeuta" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="11" GridPane.vgrow="ALWAYS">
