--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -263,11 +263,49 @@
       </VBox>
       <HBox HBox.hgrow="ALWAYS">
          <children>
-            <VBox alignment="CENTER" prefHeight="586.0" prefWidth="762.0" HBox.hgrow="ALWAYS">
+            <VBox alignment="CENTER" prefHeight="588.0" prefWidth="737.0" HBox.hgrow="ALWAYS">
                <children>
+                  <VBox prefHeight="50.0" prefWidth="782.0">
+                     <children>
+                        <GridPane prefHeight="30.0" prefWidth="686.0" VBox.vgrow="ALWAYS">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="698.0" minWidth="10.0" prefWidth="391.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="391.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="10.0" minHeight="7.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label prefHeight="32.0" prefWidth="423.0" text="Simulaation toiminta" textAlignment="CENTER" textFill="WHITE">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets left="25.0" top="15.0" />
+                                 </padding>
+                              </Label>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="383.0" spacing="2.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="109.0" text="Tietokanta-yhteys: " textFill="WHITE" />
+                                    <Label fx:id="connLabel" prefHeight="17.0" prefWidth="181.0" textFill="WHITE" />
+                                 </children>
+                                 <GridPane.margin>
+                                    <Insets top="15.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets right="25.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="20.0" top="5.0" />
+                           </VBox.margin>
+                        </GridPane>
+                     </children>
+                  </VBox>
                   <AnchorPane fx:id="canvasConsole" minHeight="200.0" minWidth="500.0" prefHeight="275.0" prefWidth="782.0" styleClass="canvasConsole" stylesheets="@style.css" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="10.0" left="20.0" right="20.0" />
                      </VBox.margin>
                      <children>
                         <Canvas fx:id="topConsoleCanvas" height="236.0" width="742.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -276,8 +314,14 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </AnchorPane>
-                  <VBox alignment="CENTER" />
-                  <TextArea id="bottomConsole" fx:id="bottomConsole" editable="false" minHeight="200.0" minWidth="500.0" prefHeight="275.0" prefWidth="782.0" styleClass="bottomConsole" stylesheets="@style.css" text="Simulaation tulosteet:&#10;" VBox.vgrow="ALWAYS">
+                  <VBox alignment="CENTER_LEFT">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="115.0" text="Simulaation tulosteet" textFill="WHITE" VBox.vgrow="ALWAYS" />
+                     </children>
+                     <padding>
+                        <Insets left="25.0" />
+                     </padding></VBox>
+                  <TextArea id="bottomConsole" fx:id="bottomConsole" editable="false" minHeight="200.0" minWidth="500.0" prefHeight="275.0" prefWidth="782.0" styleClass="bottomConsole" stylesheets="@style.css" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
