--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -135,7 +135,7 @@
                         <Font name="Century Gothic Bold" size="12.0" />
                      </font>
                      <tooltip>
-                        <Tooltip fx:id="simuPoikkeamaInfoTooltip" text="Tämä syötekenttä määrittää poikkeaman&#10;keskimääräiselle palveluajalle. Jos keskimääräinen&#10;palveluaika on 30 aikayksikköä ja poikkeama on 5,&#10;voi palveluaika vaihdella 25-35 välillä." />
+                        <Tooltip fx:id="simuPoikkeamaInfoTooltip" text="Tämä syötekenttä määrittää palveluajan varianssin&#10;keskimääräiselle palveluajalle. Jos keskimääräinen&#10;palveluaika on 30 aikayksikköä ja poikkeama on 5,&#10;voi palveluaika vaihdella 25-35 välillä." />
                      </tooltip>
 
                         </TextField>
@@ -236,7 +236,7 @@
                   </HBox>
                   <HBox alignment="CENTER" GridPane.rowIndex="9">
                      <children>
-                        <Label alignment="CENTER" prefHeight="15.0" prefWidth="140.0" text="Poikkeama" textFill="WHITE" HBox.hgrow="ALWAYS">
+                        <Label alignment="CENTER" prefHeight="15.0" prefWidth="140.0" text="Varianssi" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
                               <Font name="Century Gothic Bold" size="12.0" />
                            </font>
