--- a/src/main/resources/view.fxml
+++ b/src/main/resources/view.fxml
@@ -135,7 +135,7 @@
                         <Font name="Century Gothic Bold" size="12.0" />
                      </font>
                      <tooltip>
-                        <Tooltip fx:id="simuPoikkeamaInfoTooltip" text="Tämä syötekenttä määrittää palveluajan varianssin&#10;keskimääräiselle palveluajalle. Jos keskimääräinen&#10;palveluaika on 30 aikayksikköä ja poikkeama on 5,&#10;voi palveluaika vaihdella 25-35 välillä." />
+                        <Tooltip fx:id="simuPoikkeamaInfoTooltip" text="Tämä syötekenttä määrittää palveluajan varianssin." />
                      </tooltip>
 
                         </TextField>
